# sqlx

./: Cargo.toml
examples/mysql/todos/: Cargo.toml
examples/postgres/todos/: Cargo.toml
sqlx-core/: Cargo.toml
sqlx-core/src/mysql/options/: mod.rs  ssl_mode.rs
sqlx-core/src/net/tls/: mod.rs
sqlx-core/src/postgres/options/: mod.rs  ssl_mode.rs
sqlx-macros/: Cargo.toml
sqlx-macros/src/: test_attr.rs
sqlx-rt/: Cargo.toml
sqlx-rt/src/: rt_tokio.rs
src/: lib.rs
