[package]
name = "sqlx-example-mysql-todos"
version = "0.1.0"
edition = "2021"
workspace = "../../../"

[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx_wasi = { path = "../../../", features = [ "mysql", "runtime-tokio-rustls" ] }
structopt = "0.3"
tokio_wasi = { version = "1", features = ["macros"]}
